# HiNote

./: .gitignore  ErrorToBeFixed.md  GITHUB_PUSH.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
scripts/: gen-icon.js  tauri-dev.js
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: OriginCross.tsx  TextBox.tsx
