[package]
name = "hinote"
version = "0.1.0"
description = "HiNote - Infinite Canvas Markdown Note"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-start-dragging", "window-unminimize", "window-close", "window-maximize", "window-unmaximize", "window-minimize", "window-hide", "window-show"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
